# rust-uno-sequencer

./: Cargo.toml  flash.sh
src/: lcd.rs  main.rs
